--- a/index.html
+++ b/index.html
@@ -2,27 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIGFOCUS TECHNOLOGIES LIMITED</title>
-    <meta name="description" content="Ecommerce Product Home Page">
-    <!-- CSS-->
+    <!-- Custom CSS-->
     <link rel="stylesheet" href="index.css">
-    <!--Bootstrap css-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <!--Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
+            <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="images/logo/logo.png" alt="BigFocus Technologies" class="logo-img">
+                <img src="images/logo_images/logo.png" alt="Company Logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+
+            <!-- Mobile Toggle Button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
+
+            <!-- Navigation Content -->
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
@@ -33,34 +36,80 @@
                         <a class="nav-link" href="#">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ's</a>
+                        <a class="nav-link" href="#">Software</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">FAQs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
                     </li>
                 </ul>
-                <form class="d-flex me-3">
-                    <input class="form-control me-2" type="search" placeholder="Search solutions...">
-                    <button class="btn btn-outline-primary" type="submit">
+
+                <!-- Search Form -->
+                <form class="search-form d-flex">
+                    <input class="form-control" type="search" placeholder="Search..." aria-label="Search">
+                    <button class="btn" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <div class="d-flex align-items-center">
-                    <a href="#" class="btn btn-link">
-                        <i class="fas fa-user me-2"></i>Account
-                    </a>
-                    <a href="#" class="btn btn-link position-relative">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                            3
-                        </span>
-                    </a>
+
+                <!-- Login Button -->
+                <div class="btn login-btn">
+                    <a href="#" class="login-btn">Login</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <!--Bootstrap js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+    <!-- Main Content Area -->
+    <main>
+        <!-- Add your main content here -->
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <!-- Newsletter Section -->
+            <div class="footer-newsletter">
+                <h3>Stay in the loop!</h3>
+                <p class="text-accent">Get exclusive deals and tips!</p>
+                <p class="text-muted">Be the first to know about new product launches, exciting deals, and helpful tech tips.</p>
+                <form class="newsletter-form">
+                    <div class="position-relative">
+                        <input type="email" class="form-control" placeholder="Enter your email">
+                        <button type="submit" class="btn subscribe-btn">Subscribe now!</button>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Navigation Links -->
+            <nav class="footer-nav">
+                <a href="#" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Shop</a>
+                <a href="#" class="nav-link">Blog</a>
+                <a href="#" class="nav-link">FAQs</a>
+                <a href="#" class="nav-link">Software</a>
+                <a href="#" class="nav-link">About Us</a>
+            </nav>
+
+            <!-- Footer Bottom -->
+            <div class="footer-bottom">
+                <div class="footer-logo">
+                    <img src="images/logo_images/logo.png" alt="Bigfocus Technologies Limited">
+                </div>
+                <div class="copyright">
+                    <p class="mb-0">© 2024 Bigfocus Technologies Limited</p>
+                </div>
+                <div class="anniversary-logo">
+                    <img src="images/logo/anniversary-logo.png" alt="25 Years Anniversary">
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS and Font Awesome -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
 </body>
 </html>
