--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">Namstech Digital</div>
+            <div class="logo">NamsTech</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -654,7 +654,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Kelvin Nambale</h1>
+            <h1>Namstech Digital Solutions</h1>
             <div class="subtitle">IT Enthusiast & Digital Solutions Expert</div>
             <p>Transforming businesses through innovative technology solutions, web development, and comprehensive IT services</p>
             <a href="#contact" class="cta-button">Get Started</a>
@@ -668,8 +668,8 @@
             <div class="about-content fade-in">
                 <div class="profile-img">KN</div>
                 <div class="about-text">
-                    <h3>Professional IT Consultant</h3>
-                    <p>With extensive experience in IT consulting and digital solutions, I specialize in helping businesses leverage technology to achieve their goals. My expertise spans web development, graphic design, networking, and comprehensive IT support services.</p>
+                    <h3>Professional IT Enthusiast</h3>
+                    <p>With experience in IT consulting and digital solutions, I specialize in helping businesses leverage technology to achieve their goals. My expertise spans web development, graphic design, networking, and comprehensive IT support services.</p>
                     <p>Through Namstech Digital Solutions, I provide end-to-end technology services that empower businesses to thrive in the digital age. From custom web development to government service facilitation, I'm committed to delivering excellence in every project.</p>
                     <p>My approach combines technical expertise with business acumen to deliver solutions that not only work but drive real business value.</p>
                 </div>
