--- a/index.html
+++ b/index.html
@@ -594,6 +594,7 @@
             background: rgba(255,255,255,0.1);
             color: var(--white);
             backdrop-filter: blur(10px);
+            border: 1px solid;
         }
 
         .form-group input::placeholder,
