--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">Namstech Digital</div>
+            <div class="logo">Namstech</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -731,7 +731,7 @@
             <div class="about-content fade-in">
                 <div class="profile-img">KN</div>
                 <div class="about-text">
-                    <h3>Professional IT Consultant</h3>
+                    <h3>Professional IT Enthusiast</h3>
                     <p>With extensive experience in IT consulting and digital solutions, I specialize in helping businesses leverage technology to achieve their goals. My expertise spans web development, graphic design, networking, and comprehensive IT support services.</p>
                     <p>Through Namstech Digital Solutions, I provide end-to-end technology services that empower businesses to thrive in the digital age. From custom web development to government service facilitation, I'm committed to delivering excellence in every project.</p>
                     <p>My approach combines technical expertise with business acumen to deliver solutions that not only work but drive real business value.</p>
