--- a/index.html
+++ b/index.html
@@ -968,28 +968,28 @@
                         <i>📧</i>
                         <div>
                             <h4>Email</h4>
-                            <p>info@namstechdigital.com</p>
+                            <p>knambale5@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i>📱</i>
                         <div>
                             <h4>Phone</h4>
-                            <p>+254 xxx xxx xxx</p>
+                            <p>+254 701 924 999</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i>📍</i>
                         <div>
                             <h4>Location</h4>
-                            <p>Nairobi, Kenya</p>
+                            <p>Vihiga, Kenya</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i>🌐</i>
                         <div>
                             <h4>Website</h4>
-                            <p>www.namstechdigital.com</p>
+                            <p>https://big-focus-website.vercel.app/</p>
                         </div>
                     </div>
                 </div>
