--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Kelvin Nambale</h1>
+            <h1>Namstech Digital Solutions</h1>
             <div class="subtitle">IT Enthusiast & Digital Solutions Expert</div>
             <p>Transforming businesses through innovative technology solutions, web development, and comprehensive IT services</p>
             <a href="#contact" class="cta-button">Get Started</a>
