--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
         .form-group input::placeholder,
         .form-group textarea::placeholder {
             color: rgba(255,255,255,0.7);
+            border: 1px solid;
         }
 
         .submit-btn {
