--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -799,8 +800,8 @@
                     <div class="project-image">🌐</div>
                     <div class="project-content">
                         <span class="project-category">Web Development</span>
-                        <h3>E-Commerce Platform</h3>
-                        <p>A fully responsive e-commerce website with integrated payment gateway, inventory management, and customer portal for a local retail business.</p>
+                        <h3>Church Platform</h3>
+                        <p>A fully responsive church website with ministries, events, sermons, church registration management, feedback and  announcements management</p>
                         <div class="project-tech">
                             <span class="tech-tag">HTML5</span>
                             <span class="tech-tag">CSS3</span>
