--- a/index.html
+++ b/index.html
@@ -820,16 +820,17 @@
                     <div class="project-image">🏢</div>
                     <div class="project-content">
                         <span class="project-category">Corporate Solution</span>
-                        <h3>Business Management System</h3>
-                        <p>Custom CRM and inventory management system for a manufacturing company, including automated reporting and multi-user access control.</p>
+                        <h3>Online Accounting & Task System</h3>
+                        <p>Admin, Client and employees Portal and task management system for a company, including multi-user access control.</p>
                         <div class="project-tech">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">MongoDB</span>
-                            <span class="tech-tag">Express</span>
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JS</span>
+                            <span class="tech-tag">PHP</span>
+                            <span class="tech-tag">MySQL</span >
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link primary">View Demo</a>
+                            <a href="#" class="project-link primary">View Project</a>
                             <a href="#" class="project-link secondary">Details</a>
                         </div>
                     </div>
