--- a/index.html
+++ b/index.html
@@ -839,18 +839,18 @@
                 <div class="project-card fade-in">
                     <div class="project-image">🎨</div>
                     <div class="project-content">
-                        <span class="project-category">Branding & Design</span>
-                        <h3>Restaurant Brand Identity</h3>
-                        <p>Complete brand identity design including logo, menu design, business cards, and social media templates for a local restaurant chain.</p>
+                        <span class="project-category">Graphic & Design</span>
+                        <h3>Brand Identity</h3>
+                        <p>Complete brand design including flyers, menu design, business cards, and banners.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Adobe Illustrator</span>
                             <span class="tech-tag">Photoshop</span>
-                            <span class="tech-tag">InDesign</span>
+                            <span class="tech-tag">Poster My Wall</span>
                             <span class="tech-tag">Figma</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link primary">View Portfolio</a>
-                            <a href="#" class="project-link secondary">Process</a>
+                            <a href="#" class="project-link primary">View Gallery</a>
+                           
                         </div>
                     </div>
                 </div>
