--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
                             <span class="tech-tag">Figma</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link primary">View Gallery</a>
+                            <a href="test.html" class="project-link primary">View Our Designs</a>
                            
                         </div>
                     </div>
@@ -858,9 +858,9 @@
                 <div class="project-card fade-in">
                     <div class="project-image">🎬</div>
                     <div class="project-content">
-                        <span class="project-category">Video Production</span>
-                        <h3>Corporate Introduction Videos</h3>
-                        <p>Professional video production series for tech startups, including company introductions, product demos, and promotional content.</p>
+                        <span class="project-category">Video Intros</span>
+                        <h3>Introduction Videos</h3>
+                        <p>Professional video for tech startups, including company introductions, product demos, and promotional content.</p>
                         <div class="project-tech">
                             <span class="tech-tag">After Effects</span>
                             <span class="tech-tag">Premiere Pro</span>
@@ -868,8 +868,8 @@
                             <span class="tech-tag">Sound Design</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link primary">Watch Reel</a>
-                            <a href="#" class="project-link secondary">Behind Scenes</a>
+                            <a href="#" class="project-link primary">View Our Designs</a>
+                          
                         </div>
                     </div>
                 </div>
