--- a/test.html
+++ b/test.html
@@ -509,7 +509,7 @@
                     <button class="back-button" onclick="goBack(index.html)">
                         ← Back
                     </button>
-                    <div class="logo">Graphics & Video Gallery</div>
+                    <div class="logo">Graphics Showcase</div>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#gallery">Gallery</a></li>
