--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             <div class="subtitle">IT Enthusiast & Digital Solutions Expert</div>
             <p>Transforming businesses through innovative technology solutions, web development, and comprehensive IT services</p>
             <a href="#contact" class="cta-button">Get Started</a>
-            <a href="test.html" class="cta-button">Graphic Gallery</a>
+            <a href="test.html" class="cta-button" style=" background-color: white;">Gallery</a>
         </div>
     </section>
 
