--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             --border-color: rgba(0,0,0,0.1);
             --card-bg: #ffffff;
             --navbar-bg: rgba(255, 255, 255, 0.95);
+            --gradient: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
 
         [data-theme="dark"] {
