--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                             <span class="tech-tag">MySQL</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link primary">View Live</a>
+                            <a href="https://church-website-flax.vercel.app/ministry/children.html" class="project-link primary" target="blank">View Live</a>
                             <a href="#" class="project-link secondary">Case Study</a>
                         </div>
                     </div>
