--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">Namstech</div>
+            <div class="logo">Namstech Solutions</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
