--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
             background: rgba(255,255,255,0.1);
             color: var(--white);
             backdrop-filter: blur(10px);
-            border: 1px solid;
+            
         }
 
         .form-group input::placeholder,
@@ -899,17 +899,17 @@
                     <div class="project-image">📊</div>
                     <div class="project-content">
                         <span class="project-category">Digital Services</span>
-                        <h3>Government Services Portal</h3>
-                        <p>Streamlined digital portal helping clients navigate KRA tax submissions and eCitizen services, reducing processing time by 70%.</p>
+                        <h3>KRA & ECitizen Services </h3>
+                        <p>Streamlined digital platforms helping clients navigate KRA tax submissions and government services, reducing processing time by 70%.</p>
                         <div class="project-tech">
-                            <span class="tech-tag">Government APIs</span>
-                            <span class="tech-tag">Secure Forms</span>
-                            <span class="tech-tag">Document Processing</span>
-                            <span class="tech-tag">Compliance</span>
+                            <span class="tech-tag">Government Services</span>
+                            <span class="tech-tag">KRA</span>
+                            <span class="tech-tag">NSSF</span>
+                            <span class="tech-tag">NHIF</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link primary">Learn More</a>
-                            <a href="#" class="project-link secondary">Success Stories</a>
+                            <a href="#contact" class="project-link primary">CONTACT US</a>
+                           
                         </div>
                     </div>
                 </div>
