--- a/index.html
+++ b/index.html
@@ -787,8 +787,8 @@
                 </div>
                 <div class="service-card fade-in">
                     <div class="service-icon">📊</div>
-                    <h3>Accounting Services</h3>
-                    <p>Comprehensive accounting solutions including bookkeeping, financial reporting, and accounting software setup and training.</p>
+                    <h3>General Accounting Services</h3>
+                    <p>Comprehensive accounting services including bookkeeping, financial, and accounting software setup and training.</p>
                 </div>
             </div>
         </div>
