--- a/skill.html
+++ b/skill.html
@@ -408,10 +408,28 @@
     </style>
 </head>
 <body>
-    <button class="theme-toggle" onclick="toggleTheme()">
-        <i class="fas fa-moon"></i>
-    </button>
-
+   
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <nav class="nav-container">
+                <div class="nav-left">
+                    <a href="index.html" class="back-button">
+                        ← Back
+                    </a>
+                    <div class="logo">Graphic Gallery</div>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#videos">Videos</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <button class="theme-toggle" onclick="toggleTheme()">
+                    🌙
+                </button>
+            </nav>
+        </div>
+    </header>
     <section class="skills-section">
         <div class="container">
             <div class="section-header">
