--- a/skill.html
+++ b/skill.html
@@ -520,13 +520,9 @@
                     <a href="index.html" class="back-button">
                         ← Back
                     </a>
-                    <div class="logo">Graphic Gallery</div>
+                    <div class="logo">Skills & Languages</div>
                 </div>
-                <ul class="nav-links">
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#videos">Videos</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
+                
                 <button class="theme-toggle" onclick="toggleTheme()">
                     🌙
                 </button>
