--- a/skill.html
+++ b/skill.html
@@ -520,7 +520,7 @@
                     <a href="index.html" class="back-button">
                         ← Back
                     </a>
-                    <div class="logo">Skills & Languages</div>
+                    <div class="logo">GitHub Skills</div>
                 </div>
                 
                 <button class="theme-toggle" onclick="toggleTheme()">
