--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-9
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -782,7 +782,7 @@
             <a href="#contact" class="cta-button">Get Started</a>
             <a href="test.html" class="cta-button">Gallery</a>
             
-            <a href="skill.html" class="cta-button">Skills</a>
+            <a href="skill.html" class="cta-button"style="margin-top:10px;">Skills</a>
 
         </div>
     </section>
