--- a/index.html
+++ b/index.html
@@ -980,8 +980,8 @@
         <div class="container">
             <h2 class="section-title fade-in">Technical Skills</h2>
 
-  "project-links">
-                            <a href="skill.html" class="project-link primary">View on GitHub</a>          <div class="skills-grid">
+ <a href="skill.html" class="project-link primary">View on GitHub</a>          
+            <div class="skills-grid">
                 <div class="skill-item fade-in">
                     <h4>Web Development</h4>
                     <div class="skill-bar">
