--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
         <div class="container">
             <h2 class="section-title fade-in">Technical Skills</h2>
 
- <a href="skill.html" class="project-link primary">View on GitHub</a>          
+ <a href="skill.html" class="project-link primary">View skills  on GitHub</a>          
             <div class="skills-grid">
                 <div class="skill-item fade-in">
                     <h4>Web Development</h4>
