--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelvin Nambale - Namstech Digital Solutions</title>
+    <link rel="stylesheet" href="index.css">
     <style>
         * {
             margin: 0;
@@ -47,6 +48,11 @@
             --dark: #ffffff;
             --gray: #b8bcc8;
             --shadow: 0 10px 30px rgba(0,0,0,0.3);
+        }
+
+        html, body {
+            overflow-x: hidden;
+            max-width: 100vw;
         }
 
         body {
