--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             background-color: var(--bg-primary);
             overflow-x: hidden;
             transition: background-color 0.3s ease, color 0.3s ease;
+            font-size: 16px;
         }
 
         /* Navigation */
@@ -760,6 +761,12 @@
     </style>
 </head>
 <body>
+    <!-- Loading Overlay -->
+    <div id="loading-overlay" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: var(--bg-primary); display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 2000;">
+        <div class="spinner" style="width: 50px; height: 50px; border: 5px solid var(--border-color); border-top: 5px solid var(--primary); border-radius: 50%; animation: spin 1s linear infinite;"></div>
+        <p style="margin-top: 1rem; color: var(--text-secondary); font-size: 1.2rem;">Loading...</p>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
