--- a/index.html
+++ b/index.html
@@ -885,7 +885,9 @@
         <div class="container">
             <h2 class="section-title fade-in">About Us</h2>
             <div class="about-content fade-in">
-                <div class="profile-img"></div>
+                <div class="profile-img">
+                    <img src="images/logo/about.png" alt="About Image" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+                </div>
                 <div class="about-text">
                     <h3>Professional IT Company</h3>
                     <p>With extensive experience in IT consulting and digital solutions, I specialize in helping businesses leverage technology to achieve their goals. My expertise spans web development, graphic design, networking, and comprehensive IT support services.</p>
