--- a/test.html
+++ b/test.html
@@ -507,6 +507,13 @@
                 font-size: 0.9rem;
             }
         }
+        /* Footer */
+        .footer {
+            background: #000;
+            color: var(--white);
+            text-align: center;
+            padding: 2rem 0;
+        }
     </style>
 </head>
 <body>
@@ -709,6 +716,12 @@
             <!-- Content will be inserted here -->
         </div>
     </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Namstech Digital Solutions. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script>
         // Theme Toggle
