--- a/skill.html
+++ b/skill.html
@@ -741,6 +741,13 @@
 .reviews-display::-webkit-scrollbar-thumb:hover {
     background: #0052a3;
 }
+/* Footer */
+        .footer {
+            background: #000;
+            color: var(--white);
+            text-align: center;
+            padding: 2rem 0;
+        }
 /* ============================================
    COMPREHENSIVE MEDIA QUERIES FOR ALL SCREENS
    ============================================ */
@@ -1457,6 +1464,12 @@
     </div>
 </section>
 
+ <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Namstech Digital Solutions. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script>
         const GITHUB_USERNAME = 'kelvinnambale';
