--- a/index.html
+++ b/index.html
@@ -1198,6 +1198,11 @@
     <script>
         // Mobile menu toggle
         const mobileMenu = document.querySelector('.mobile-menu');
+        const navLinks = document.querySelector('.nav-links');
+
+        mobileMenu.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
 
         // Hide loading overlay after window load with 30 seconds delay
         window.addEventListener('load', () => {
